Added archive download link

--- a/guide.html
+++ b/guide.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Project Aincraft Archive</h1>
+    <p>Don't have the modpack or map files? Feel free to view the archive/backup <a href="https://drive.google.com/drive/folders/1FnnhLl8_Slje5AYLyE5_q-FcF8FD3M5u?usp=sharing" target="new"></a></p>
 <hr>
     <h2>How to Use Map File</h2>
     <ol>
