--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 id="Title">PROJECT AINCRAFT</h1>
         <p>An Upcoming Sword art online themed modded minecraft server</p>
         
-        <div style="margin-top: 15px;"><p>server.ip</p></div>
+        <!-- <div style="margin-top: 15px;"><p>server.ip</p></div> -->
     </div>
     <center><img style="position: absolute;bottom: 0;filter:brightness(200%);" src="./assets/arrow.gif" width="50px"></center>
     <div class="GradientFader">
@@ -47,7 +47,7 @@
             <tr>
                 <td>
                     <h2>How do I join the server?</h2>
-                    <p>The server is not released yet.  We are still in the process of creating it.  Feel free to join our <a href="https://discord.gg/j2F8dmquuC">Discord</a> and help contribute to the server.</p>
+                    <p>The server is not released yet.  We are still in the process of creating it.  Feel free to join our <a href="https://discord.gg/YAhmUdp3VX">Discord</a> and help contribute to the server.</p>
                 </td>
                 <td>
                     <img src="./assets/KIRITO.webp" width="250px" align="right">
@@ -59,7 +59,7 @@
                 </td>
                 <td align="right">
                     <h2>When will the server be released?</h2>
-                    <p>There isn't a specific date yet. Join our <a href="https://discord.gg/j2F8dmquuC">Discord</a> and subscribe to us <a href="http://youtube.com/@Project_Aincraft">YouTube</a> to stay informed.</p>
+                    <p>There isn't a specific date yet. Join our <a href="https://discord.gg/YAhmUdp3VX">Discord</a> and subscribe to us <a href="http://youtube.com/@Project_Aincraft">YouTube</a> to stay informed.</p>
                 </td>
             </tr>
         </table>
@@ -77,7 +77,7 @@
                 </div> -->
                 <div class="FooterCat">
                     <h2>Community</h2>
-                    <a href="https://discord.gg/j2F8dmquuC" target="new">Discord</a><br>
+                    <a href="https://discord.gg/YAhmUdp3VX" target="new">Discord</a><br>
                     <!-- <a href="#" target="new">Forum</a> -->
                 </div>
             </div>
