--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <p>An Upcoming Sword art online themed modded minecraft server</p>
         
         <!-- <div style="margin-top: 15px;"><p>server.ip</p></div> -->
-        <a href="https://discord.gg/YAhmUdp3VX">
+        <br>
+        <a href="https://discord.gg/YAhmUdp3VX" target="new">
             <table style="width:100%;">
                 <tbody>
                     <tr>
@@ -138,7 +139,7 @@
     });
 }
 
-let discordStatusDiv = $(".discordmembercount");
+let discordStatusDiv = $("#discordmembercount");
 function updateDiscordStatus(presence_count) {
     
     discordStatusDiv.empty();
