--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ function updateDiscordStatus(presence_count) {
     
     discordStatusDiv.empty();
     if (presence_count !== 1) {
-        discordStatusDiv.html("presence_count);
+        discordStatusDiv.html(presence_count);
     } else {
         discordStatusDiv.html(presence_count);
     }
