--- a/index.html
+++ b/index.html
@@ -152,5 +152,14 @@ function updateDiscordStatus(presence_count) {
 viewDiscordStatus();
 
         </script>
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('scrapblox', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Donate',
+    'floating-chat.donateButton.background-color': '#fcbf47',
+    'floating-chat.donateButton.text-color': '#323842'
+  });
+</script>
 </body>
 </html>
