Better SEO and added SAO MC vids

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Project Aincraft</title>
+    <meta name="og:title" property="og:title" content="Project Aincraft">
+    <meta name="twitter:card" content="summary">
+    <meta name="description" content="A Sword Art Online inspired modded minecraft server">
 
     <link rel="stylesheet" href="./main.css">
 
@@ -75,6 +79,14 @@
                 </td>
             </tr>
         </table>
+        <div style="color:white;">
+            <h2>Why are we creating an SAO Minecraft server?</h2><p>Servers have tried in the past but ended up shutting down. We strive to give the players what they want as there is a demand for something like this.  Here's how popular some SAO servers were.</p>
+            <marquee>
+                <iframe width="315" height="177" src="https://www.youtube-nocookie.com/embed/videoseries?si=TTBFaGCrY-8KkRSy&amp;list=PLg3xKI-Eoa_sDvy26Ane5U3fT4uMXo0oT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+                <iframe width="315" height="177" src="https://www.youtube-nocookie.com/embed/videoseries?si=SfuK54yDP1OwTlCq&amp;list=PLIgmxnbcly_ZvOGwMAeXLcNS4kIb6ZlFn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe><iframe width="315" height="177" src="https://www.youtube-nocookie.com/embed/videoseries?si=HRuLCmcwCyT1-2O5&amp;list=PLNC5l7VawPO_K72bhKPqnFErxVTBpJXYX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+                <iframe width="315" height="177" src="https://www.youtube-nocookie.com/embed/videoseries?si=rzPZGSwI_zcnqCFP&amp;list=PLLMufbSSwyTrUD_G5GK0M_RPDPYEY7L4X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+            </marquee>
+        </div>
     </div>
     <center>
         <footer>
